# langgraph-mcp

./: .gitignore  LICENSE  README.md  README.template.md  api.http  env.example  langgraph.json  llms.txt  llms_full.txt  mcp-servers-config.json  pyproject.toml  sample-mcp-server-config.json  scratch.md
.github/workflows/: sync-docs.yml
docs/: code_patterns.md  dependencies.md  langgraph_integration.md  project_overview.md
docs/strategies/: index.md  with_planner.md  with_planner_n_prompts.md  with_prompts.md  with_retriever.md
jinja-templates/: j2_input.json  j2_lm_default_template.j2  j2_output.txt  j2_test_template.j2  jinja_apply.py
media/: agent-builder.excalidraw  mcp-architecture.md  planning-orchestrator-with-mcp.md
playwright/: config.json  docker-run.sh  readme.txt
scripts/: generate_readme.py
src/langgraph_mcp/: __init__.py  assistant_graph.py  build_router_graph.py  configuration.py  mcp_react_graph.py  mcp_wrapper.py  playwright_react_graph.py  prompts.py  retriever.py  router_graph.py  routing_utils.py  state.py  subgraph_sample.py  utils.py
src/langgraph_mcp/planner_style/: config.py  graph.py  prompts.py
src/langgraph_mcp/with_planner/: config.py  graph.py  prompts.py  state.py
src/langgraph_mcp/with_planner/with_prompts/: __init__.py  config.py  graph.py
src/langgraph_mcp/with_planner_n_prompts/: __init__.py  config.py  graph.py  prompts.py  state.py
src/langgraph_mcp/with_retriever/: config.py  graph.py  index_builder.py  prompts.py  retriever.py  state.py  utils.py
tests/: test_assistant_with_planner.py  test_old_planner_agent.py  test_planner_n_prompts.py  test_planner_style_agent.py
